force-app/main/default/objects/Work_Order__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Access</fullName>
            </value>
            <value>
                <fullName>Badge</fullName>
            </value>
            <value>
                <fullName>Key Assist</fullName>
            </value>
            <value>
                <fullName>Key Pad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>