force-app/main/default/objects/Work_Order__c/fields/Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Access_Notes__c</fullName>
    <label>Access Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>