force-app/main/default/objects/Work_Order__c/fields/Acquire_Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Acquire_Work_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquire Work Authorization</label>
    <type>Checkbox</type>
</CustomField>