force-app/main/default/objects/Work_Order__c/fields/Addiotional_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Addiotional_Email_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup an user to send additional email notification.</inlineHelpText>
    <label>Additional Email Recipient 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>