force-app/main/default/objects/Work_Order__c/fields/Additional_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup an user to send additional email notification.</inlineHelpText>
    <label>Additional Email Recipient 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>