force-app/main/default/objects/Work_Order__c/fields/Anteroom__c.field-meta.xml
<CustomField>
    <fullName>Anteroom__c</fullName>
    <label>Anteroom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>