force-app/main/default/objects/Work_Order__c/fields/Approximate_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Square_Footage__c</fullName>
    <label>Approximate Square Footage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>