force-app/main/default/objects/Work_Order__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Name</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>