force-app/main/default/objects/Work_Order__c/fields/Barrier_Framing__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Framing__c</fullName>
    <label>Barrier Framing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zip Poles</fullName>
            </value>
            <value>
                <fullName>Steel Track</fullName>
            </value>
            <value>
                <fullName>Steel Stud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>