force-app/main/default/objects/Work_Order__c/fields/Barrier_Framing_Qty__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Framing_Qty__c</fullName>
    <label>Barrier Framing Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>