force-app/main/default/objects/Work_Order__c/fields/Barrier_Linear_Feet__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Linear_Feet__c</fullName>
    <label>Barrier Linear Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>