force-app/main/default/objects/Work_Order__c/fields/Barrier_Type__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Type__c</fullName>
    <label>Barrier Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poly</fullName>
            </value>
            <value>
                <fullName>FR Poly</fullName>
            </value>
            <value>
                <fullName>FR Coroplast</fullName>
            </value>
            <value>
                <fullName>Drywall</fullName>
            </value>
            <value>
                <fullName>FR Plywood</fullName>
            </value>
            <value>
                <fullName>ATI Panel System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>