force-app/main/default/objects/Work_Order__c/fields/Barrier_Walls__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Walls__c</fullName>
    <label>Barrier Walls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>