force-app/main/default/objects/Work_Order__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <formula>ATI_Job__r.Project_Site_Contact_Name__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell Phone</label>
    <type>Text</type>
</CustomField>