force-app/main/default/objects/Work_Order__c/fields/City_State_ZIP__c.field-meta.xml
<CustomField>
    <fullName>City_State_ZIP__c</fullName>
    <label>City, State, ZIP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>