force-app/main/default/objects/Work_Order__c/fields/Clearance_Required__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearance Required</label>
    <type>Checkbox</type>
</CustomField>