force-app/main/default/objects/Work_Order__c/fields/Clearance_Type__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Type__c</fullName>
    <label>Clearance Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>