force-app/main/default/objects/Work_Order__c/fields/Construction_Debris__c.field-meta.xml
<CustomField>
    <fullName>Construction_Debris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construction Debris</label>
    <type>Checkbox</type>
</CustomField>