force-app/main/default/objects/Work_Order__c/fields/Consultant_Company__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Company__c</fullName>
    <label>Consultant - Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>