force-app/main/default/objects/Work_Order__c/fields/Consultant_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Contact_Person__c</fullName>
    <label>Consultant - Contact Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>