force-app/main/default/objects/Work_Order__c/fields/Consultant_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Contact_Phone__c</fullName>
    <label>Consultant - Contact Phone</label>
    <type>Phone</type>
</CustomField>