force-app/main/default/objects/Work_Order__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor - Contact Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>