force-app/main/default/objects/Work_Order__c/fields/Contractor_Company__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Company__c</fullName>
    <label>Contractor - Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>