force-app/main/default/objects/Work_Order__c/fields/Contractor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Contact_Phone__c</fullName>
    <label>Contractor - Contact Phone</label>
    <type>Phone</type>
</CustomField>