force-app/main/default/objects/Work_Order__c/fields/Covering__c.field-meta.xml
<CustomField>
    <fullName>Covering__c</fullName>
    <label>Covering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Barriers</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Med. Equip</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Wind. Cov.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>