force-app/main/default/objects/Work_Order__c/fields/Crew_Members_Male__c.field-meta.xml
<CustomField>
    <fullName>Crew_Members_Male__c</fullName>
    <label>Crew Members - Male</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>