force-app/main/default/objects/Work_Order__c/fields/Critical_Area__c.field-meta.xml
<CustomField>
    <fullName>Critical_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Area</label>
    <type>Checkbox</type>
</CustomField>