force-app/main/default/objects/Work_Order__c/fields/Daily_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Daily_End_Time__c</fullName>
    <label>Daily End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>