force-app/main/default/objects/Work_Order__c/fields/Date_Time_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Approved__c</fullName>
    <label>Date/Time Approved</label>
    <type>DateTime</type>
</CustomField>