force-app/main/default/objects/Work_Order__c/fields/Date_Time_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Submitted_for_Approval__c</fullName>
    <label>Date/Time Submitted for Approval</label>
    <type>DateTime</type>
</CustomField>