force-app/main/default/objects/Work_Order__c/fields/Demolition_Site__c.field-meta.xml
<CustomField>
    <fullName>Demolition_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demolition Site</label>
    <type>Checkbox</type>
</CustomField>