force-app/main/default/objects/Work_Order__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Division formula field pulled on from Job record</description>
    <formula>TEXT(ATI_Job__r.Division__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>