force-app/main/default/objects/Work_Order__c/fields/Dry_Decon__c.field-meta.xml
<CustomField>
    <fullName>Dry_Decon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Decon</label>
    <type>Checkbox</type>
</CustomField>