force-app/main/default/objects/Work_Order__c/fields/Electrical_Supply__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Supply__c</fullName>
    <label>Electrical - Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GFCI Required</fullName>
            </value>
            <value>
                <fullName>Spider Box</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>