force-app/main/default/objects/Work_Order__c/fields/EPA_Number__c.field-meta.xml
<CustomField>
    <fullName>EPA_Number__c</fullName>
    <label>EPA Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>