force-app/main/default/objects/Work_Order__c/fields/Exhaust__c.field-meta.xml
<CustomField>
    <fullName>Exhaust__c</fullName>
    <label>Exhaust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Outside</fullName>
            </value>
            <value>
                <fullName>Adjacent Area</fullName>
            </value>
            <value>
                <fullName>Recirculate</fullName>
            </value>
            <value>
                <fullName>Exhaust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>