force-app/main/default/objects/Work_Order__c/fields/Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact__c</fullName>
    <label>Facility Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>