force-app/main/default/objects/Work_Order__c/fields/Facility_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Phone__c</fullName>
    <label>Facility Contact Phone</label>
    <type>Phone</type>
</CustomField>