force-app/main/default/objects/Work_Order__c/fields/Fire_Systems_Seal__c.field-meta.xml
<CustomField>
    <fullName>Fire_Systems_Seal__c</fullName>
    <label>Fire Systems - Seal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoke Alarm</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>