force-app/main/default/objects/Work_Order__c/fields/Fire_Systems_Supply_Fire_Ext__c.field-meta.xml
<CustomField>
    <fullName>Fire_Systems_Supply_Fire_Ext__c</fullName>
    <label>Fire Systems - Supply Fire Ext.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>