force-app/main/default/objects/Work_Order__c/fields/Flex_Duct__c.field-meta.xml
<CustomField>
    <fullName>Flex_Duct__c</fullName>
    <label>Flex Duct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flex Duct</fullName>
            </value>
            <value>
                <fullName>Lay Flat</fullName>
            </value>
            <value>
                <fullName>ATI Duct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>