force-app/main/default/objects/Work_Order__c/fields/Flex_Duct_Size__c.field-meta.xml
<CustomField>
    <fullName>Flex_Duct_Size__c</fullName>
    <label>Flex Duct Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>