force-app/main/default/objects/Work_Order__c/fields/Floor_Level__c.field-meta.xml
<CustomField>
    <fullName>Floor_Level__c</fullName>
    <label>Floor/Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>