force-app/main/default/objects/Work_Order__c/fields/Floor_Plans_Available__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plans_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Plans Available</label>
    <type>Checkbox</type>
</CustomField>