force-app/main/default/objects/Work_Order__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <label>General Contractor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>