force-app/main/default/objects/Work_Order__c/fields/Generator_Company__c.field-meta.xml
<CustomField>
    <fullName>Generator_Company__c</fullName>
    <label>Generator Company</label>
    <length>25</length>
    <type>Text</type>
</CustomField>