force-app/main/default/objects/Work_Order__c/fields/Generator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Generator_Contact__c</fullName>
    <label>Generator Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>