force-app/main/default/objects/Work_Order__c/fields/Hazardous_Waste_Debris__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Waste_Debris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Waste Debris</label>
    <type>Checkbox</type>
</CustomField>