force-app/main/default/objects/Work_Order__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <formula>ATI_Job__r.Home_Phone__c</formula>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>