force-app/main/default/objects/Work_Order__c/fields/Home_Residence_Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Home_Residence_Number_of_Bedrooms__c</fullName>
    <label>Home Residence - Number of Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>