force-app/main/default/objects/Work_Order__c/fields/HVAC_Registers_Redirect__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Registers_Redirect__c</fullName>
    <label>HVAC Registers - Redirect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>