force-app/main/default/objects/Work_Order__c/fields/In_House__c.field-meta.xml
<CustomField>
    <fullName>In_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-House</label>
    <type>Checkbox</type>
</CustomField>