force-app/main/default/objects/Work_Order__c/fields/Independent__c.field-meta.xml
<CustomField>
    <fullName>Independent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent</label>
    <type>Checkbox</type>
</CustomField>