force-app/main/default/objects/Work_Order__c/fields/Installation_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Installation_Man_Hours__c</fullName>
    <label>Installation Man Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>