force-app/main/default/objects/Work_Order__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance - Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>