force-app/main/default/objects/Work_Order__c/fields/Insurance_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact_Person__c</fullName>
    <label>Insurance - Contact Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>