force-app/main/default/objects/Work_Order__c/fields/Insurance_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact_Phone__c</fullName>
    <label>Insurance - Contact Phone</label>
    <type>Phone</type>
</CustomField>