force-app/main/default/objects/Work_Order__c/fields/Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Address__c</fullName>
    <description>Formula field pulling on Project Site Address Link from Job record</description>
    <formula>ATI_Job__r.Project_Site_Address_Link__c</formula>
    <label>Job Address</label>
    <type>Text</type>
</CustomField>