force-app/main/default/objects/Work_Order__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Job Name field (short description without Job Number) pulled from Job/Opportunity record in order for Salesforce1 users to have access, since they are unable to view the Job/Opportunity lookup field due to license restrictions.</description>
    <formula>ATI_Job__r.Job_Name__c</formula>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>