force-app/main/default/objects/Work_Order__c/fields/Job_Number2__c.field-meta.xml
<CustomField>
    <fullName>Job_Number2__c</fullName>
    <formula>ATI_Job__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>