force-app/main/default/objects/Work_Order__c/fields/Lock_Box_Code__c.field-meta.xml
<CustomField>
    <fullName>Lock_Box_Code__c</fullName>
    <label>Lock Box Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>