force-app/main/default/objects/Work_Order__c/fields/Manometer_Qty__c.field-meta.xml
<CustomField>
    <fullName>Manometer_Qty__c</fullName>
    <label>Manometer Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>