force-app/main/default/objects/Work_Order__c/fields/Manometer_Required__c.field-meta.xml
<CustomField>
    <fullName>Manometer_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manometer Required</label>
    <type>Checkbox</type>
</CustomField>