force-app/main/default/objects/Work_Order__c/fields/Material_1_Location__c.field-meta.xml
<CustomField>
    <fullName>Material_1_Location__c</fullName>
    <label>Material 1 - Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>