force-app/main/default/objects/Work_Order__c/fields/Material_1_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Material_1_Quantity__c</fullName>
    <label>Material 1 - Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>