force-app/main/default/objects/Work_Order__c/fields/Material_2_Location__c.field-meta.xml
<CustomField>
    <fullName>Material_2_Location__c</fullName>
    <label>Material 2 - Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>