force-app/main/default/objects/Work_Order__c/fields/Material_2_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Material_2_Quantity__c</fullName>
    <label>Material 2 - Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>