force-app/main/default/objects/Work_Order__c/fields/Material_3_Location__c.field-meta.xml
<CustomField>
    <fullName>Material_3_Location__c</fullName>
    <label>Material 3 - Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>