force-app/main/default/objects/Work_Order__c/fields/Material_Requisition_Attached__c.field-meta.xml
<CustomField>
    <fullName>Material_Requisition_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Requisition Attached</label>
    <type>Checkbox</type>
</CustomField>