force-app/main/default/objects/Work_Order__c/fields/Multiple_Phases__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Phases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Phases</label>
    <type>Checkbox</type>
</CustomField>