force-app/main/default/objects/Work_Order__c/fields/Negative_Air_1800__c.field-meta.xml
<CustomField>
    <fullName>Negative_Air_1800__c</fullName>
    <label>Negative Air 1800 - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>