force-app/main/default/objects/Work_Order__c/fields/Non_Hazardous_Waste_Debris__c.field-meta.xml
<CustomField>
    <fullName>Non_Hazardous_Waste_Debris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Hazardous Waste Debris</label>
    <type>Checkbox</type>
</CustomField>