force-app/main/default/objects/Work_Order__c/fields/Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a notification is required, and fill-in the notification information in the fields below.</inlineHelpText>
    <label>Notification Required</label>
    <type>Checkbox</type>
</CustomField>