force-app/main/default/objects/Work_Order__c/fields/Number_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bags__c</fullName>
    <label>Number of Bags</label>
    <length>10</length>
    <type>Text</type>
</CustomField>