force-app/main/default/objects/Work_Order__c/fields/Number_of_Dumpsters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dumpsters__c</fullName>
    <label>Number of Dumpsters</label>
    <length>10</length>
    <type>Text</type>
</CustomField>