force-app/main/default/objects/Work_Order__c/fields/Number_of_Stories_Flights_of_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stories_Flights_of_Stairs__c</fullName>
    <label>Number of Stories / Flights of Stairs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>