force-app/main/default/objects/Work_Order__c/fields/Number_of_Work_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_Days_to_Complete__c</fullName>
    <formula>End_Date__c  -  Start_Date__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Work Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>