force-app/main/default/objects/Work_Order__c/fields/Number_of_Work_Days_to_Complete_del__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_Days_to_Complete_del__c</fullName>
    <label>Number of Work Days to Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>