force-app/main/default/objects/Work_Order__c/fields/Number_of_Workers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workers__c</fullName>
    <label>Number of Workers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>