force-app/main/default/objects/Work_Order__c/fields/Office2__c.field-meta.xml
<CustomField>
    <fullName>Office2__c</fullName>
    <description>Formula field pulling on Office from Job record</description>
    <formula>ATI_Job__r.Office2__r.Name</formula>
    <label>Office</label>
    <type>Text</type>
</CustomField>