force-app/main/default/objects/Work_Order__c/fields/Office3__c.field-meta.xml
<CustomField>
    <fullName>Office3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Office object</description>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>