force-app/main/default/objects/Work_Order__c/fields/Office_Running_Job__c.field-meta.xml
<CustomField>
    <fullName>Office_Running_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the office whose operations team will be running this job. The work order will be sent to the appropriate person at this office for approval.</inlineHelpText>
    <label>Office Running Job</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Work Orders (Office Running Job)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>