force-app/main/default/objects/Work_Order__c/fields/On_Site_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Contact_Name__c</fullName>
    <label>On-Site Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>