force-app/main/default/objects/Work_Order__c/fields/On_Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Contact_Phone__c</fullName>
    <label>On-Site Contact Phone</label>
    <type>Phone</type>
</CustomField>