force-app/main/default/objects/Work_Order__c/fields/On_Site_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Contact_Type__c</fullName>
    <inlineHelpText>Owner, Tenant, etc.</inlineHelpText>
    <label>On-Site Contact Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>