force-app/main/default/objects/Work_Order__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup up to User record to indicate the Operations Manager-- set by Process Builder &apos;Ops Manager Population onto Work Order&apos; from Opportunity record</description>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>